--- a/lab1_styles.css
+++ b/lab1_styles.css
@@ -6,6 +6,12 @@ body {
     font-size: 36pt;
     font-family: sans-serif;
     height: 60px;
+    padding: 10px;
+    border-bottom: 1px solid;
+    border-color: gray;
+    box-shadow: 2px 2px red;
+    text-shadow: 4px 4px blue;
+
 }
 
 .container {
@@ -14,11 +20,12 @@ body {
 }
 
 .sidebar {
-    width: 200px;
+    width: 170px;
     background: #ff6677;
     position: absolute;
     top: 0;
     height: 100%;
+    padding: 10px 15px;
 }
 
 .main-content {
@@ -26,4 +33,10 @@ body {
     position: absolute;
     top: 0;
     left: 200px;
+    border: 5px solid;
+    border-color: blue;
+    margin: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 10px;
 }
